# ArgusPanoptes

./: .gitignore  Argus Panoptes v1 Technical Plan.txt  README.md  _apptest_dashboard.py  _apptest_step.py  _smoke_dashboard.py  dashboard.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
_legacy/: README.md  dashboard.py  infra.py
app/: README.md  __init__.py  config.py  logging.py  main.py  nicegui_dashboard.py
dashviz/: __init__.py  infra.py  metrics.py  optimization.py  orchestrator.py  plots.py  scenarios.py  theme.py
deployment/: Dockerfile  README.md  docker-compose.yml
dsp/: README.md  __init__.py  config.py  processor_config.yaml  signal_processor.py
experiments/: README.md  baseline_metrics.json  baseline_results.md  dl_1dcnn_metrics.json  dl_1dcnn_noisy01_metrics.json  dl_1dcnn_noisy_metrics.json  dl_1dcnn_normnone_metrics.json  dl_fusion_metrics.json  dl_fusion_noisy01_metrics.json  dl_fusion_noisy_metrics.json  dl_fusion_normnone_metrics.json  dl_results.md  dl_spectrogram_metrics.json  onnx_benchmark.json  robustness_ablation.py  robustness_results.json  robustness_results_noisy.json  robustness_results_noisy01.json
experiments/models/: dl_1dcnn.onnx  dl_1dcnn.pt  dl_1dcnn_noisy.onnx  dl_1dcnn_noisy.pt  dl_1dcnn_noisy01.onnx  dl_1dcnn_noisy01.pt  dl_1dcnn_normnone.onnx  dl_1dcnn_normnone.pt  dl_fusion.onnx  dl_fusion.pt  dl_fusion_noisy.onnx  dl_fusion_noisy.pt  dl_fusion_noisy01.onnx  dl_fusion_noisy01.pt  dl_fusion_normnone.onnx  dl_fusion_normnone.pt  dl_spectrogram.onnx  dl_spectrogram.pt  xgb_clf_health_state.joblib  xgb_reg_cycle_time_factor.joblib  xgb_reg_quality_score.joblib  xgb_reg_wear_level.joblib
experiments/notebooks/: baseline_training.ipynb  dl_training.ipynb  example_exploration.ipynb
logs/: 2026-07-06_argus-v1-dl-fusion-onnx.md  2026-07-06_argus-v1-dl-hardening.md  2026-07-06_argus-v1-dsp-and-baseline.md  2026-07-06_argus-v1-sensors.md  2026-07-06_argus-v1-validation-fixes.md  2026-07-07_argus-v1-nicegui-dashboard.md  2026-07-07_argus-v1-streaming-fastapi.md  2026-07-07_argus-v1-streamlit-dashboard.md  2026-07-08_argus-v1-render-deploy.md
models/: README.md  __init__.py  baseline.py  dl_data.py  dl_models.py  onnx_inference.py  streaming_perceptor.py  train_dl.py
scripts/: benchmark_onnx.py  generate_dataset.py  stream_demo.py  validate_simulators.py
sensors/: README.md  __init__.py  config.py  sensor_specs.yaml  thermal_simulator.py  utils.py  vibration_simulator.py
tests/: conftest.py  test_baseline.py  test_dl_models.py  test_signal_processor.py  test_streaming_perceptor.py  test_thermal_simulator.py  test_vibration_simulator.py
