[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "argus-panoptes-perception"
version = "0.1.0"
description = "Multi-modal industrial perception stack for aluminum sawing & CNC machining (Nox Metals prototype)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Argus Panoptes" }]
keywords = [
    "condition-monitoring",
    "signal-processing",
    "manufacturing",
    "digital-twin",
    "synthetic-data",
]

dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.1",
    "pyarrow>=14.0",
    "pydantic>=2.5",
    "PyYAML>=6.0",
    "matplotlib>=3.8",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.1"]

[tool.setuptools]
packages = ["sensors", "dsp", "models", "app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py311"
