[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "argus-panoptes-perception"
version = "0.1.0"
description = "Multi-modal industrial perception stack for aluminum sawing & CNC machining."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Argus Panoptes" }]
keywords = [
    "condition-monitoring",
    "signal-processing",
    "manufacturing",
    "digital-twin",
    "synthetic-data",
]

dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.1",
    "pyarrow>=14.0",
    "pydantic>=2.5",
    "PyYAML>=6.0",
    "matplotlib>=3.8",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.1"]
ml = [
    "scikit-learn>=1.5",
    "xgboost>=2.1",
    "joblib>=1.4",
    # shap>=0.46  # optional for later interpretability
]
# Deep-learning + edge-export path (Day 3): 1D-CNN, spectrogram CNN, fusion,
# ONNX export + ONNX Runtime benchmarks. Kept separate so the core / ml install
# never pulls in torch. The dl extra also assumes the ml extra for the baseline
# comparison in models/train_dl.py.
dl = [
    "torch>=2.2",
    "onnx>=1.16",
    "onnxruntime>=1.18",
]
# Integration / serving path (Day 4): FastAPI service + streaming perceptor +
# Parquet inference logging. Torch-free at runtime - inference goes through
# onnxruntime (dl extra) for DL variants or joblib/xgboost (ml extra) for the
# baseline; install the relevant model extra alongside `app` as needed.
app = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "httpx>=0.27",  # FastAPI TestClient (tests) + optional client use
]

[tool.setuptools]
packages = ["sensors", "dsp", "models", "app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py311"
